# PixelTrace

./: .gitignore  Dockerfile  NOTES.md  README.md  predict.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
app/: main.py
cv/: chromatic.py  color.py  edge.py  feature_fusion.py  fft.py  geometry.py  moire.py  noise.py  preprocessing.py  reflection.py  sharpness.py  structural.py  texture.py
ml/: build_embeddings.py  build_features.py  cnn_embedding.py  compare_models.py  cross_validate.py  evaluate.py  feature_schema.py  feature_selection.py  finetune_cnn.py  hyperparameter_search.py  predict.py  prepare_dataset.py  run_cv.py  train.py
ml/models/: LogisticRegression.pkl  MLP.pkl  RandomForest.pkl  SVM_Calibrated.pkl  best_model.pkl  best_model_hc.pkl  cnn_svd.pkl  scaler.pkl  scaler_hc.pkl
tests/: test_color.py  test_edge.py  test_feature_fusion.py  test_geometry.py  test_noise.py  test_reflection.py  test_sharpness.py  test_structural.py  test_texture.py  utils.py
