[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PixelTrace"
version = "1.0.0"
description = "Evidence-Driven Computer Vision for Screen Recapture Detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "opencv-python",
    "numpy",
    "pandas",
    "scikit-image",
    "scikit-learn",
    "xgboost",
    "joblib",
    "matplotlib",
    "plotly",
    "jinja2",
    "python-multipart",
    "pillow",
    "tqdm",
    "rich",
    "pytest",
    "python-dotenv"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "cv*", "ml*", "tests*"]
