[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PixelTrace"
version = "1.0.0"
description = "Evidence-Driven Computer Vision for Screen Recapture Detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "opencv-python-headless",
    "numpy",
    "scikit-image",
    "scikit-learn",
    "joblib",
    "python-multipart",
    "pillow",
    "python-dotenv"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "cv*", "ml*", "tests*"]
